<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DinnerPlanner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="g1">Welcome to Dinner Planner</string>
    <string name="g2">Here you will be able to easily plan your dinner.</string>
    <string name="g3">On the next page start by selecting number of participants. Then select your courses.</string>
    <string name="g4">Watch magic happen!</string>
    <string name="start_button_text">Start!</string>
    <string name="number_persons">Participants</string>
    <string name="totalCost">Total cost: 0 kr</string>
    <string name="selectMenu">Choose menu</string>
    <string name="details_button">Create</string>
    <string name="details_header">Ingredients</string>
    <string name="starter">Starter</string>
    <string name="main">Main</string>
    <string name="desert">Desert</string>
    <string name="choose">Choose</string>
    <string name="cancel">Cancel</string>
    <string name="unchoose">Unchoose</string>
    <string-array name="dropdown">
        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item><item>6</item><item>7</item><item>8</item>
    </string-array>

</resources>
