<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/planning_screen"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_persons" />

        <Spinner
            android:id="@+id/dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/total_cost"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/totalCost"/>

    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/selectMenu"
        android:textSize="36dp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/starter"
        android:textSize="20dp" />

    <HorizontalScrollView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <LinearLayout
            android:id="@+id/starterScrollView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            </LinearLayout>

        </HorizontalScrollView>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/main"
        android:textSize="20dp" />

    <HorizontalScrollView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <LinearLayout
            android:id="@+id/mainScrollView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/desert"
        android:textSize="20dp" />

    <HorizontalScrollView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <LinearLayout
            android:id="@+id/desertScrollView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom">
    <Button
        android:id="@+id/go_to_details_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_button"
        android:gravity="center"
        android:color="#91204d"

        android:onClick="details_click" />

    </LinearLayout>

</LinearLayout>